# atlas_object_sorting

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  walk_goal_rviz_config.rviz
launch/: atlas_object_sorting.launch  object_sort.launch  world.launch
models/Small_Spheres/: model.config  model.sdf
models/unit_sphere_blue/: model.sdf
models/unit_sphere_green/: model.config  model.sdf
rviz/: config.rviz
src/: atlas_example_perception.cpp  atlas_object_sorting_navigation.cpp  atlas_object_sorting_perception.cpp  talker.cpp
unit_sphere_red/: model.sdf
worlds/: my_world.world  world_small_spheres
