<?xml version="1.0"?>
<package format="2">
  <name>atlas_object_sorting</name>
  <version>0.0.1</version>
  <description>The atlas_object_sorting package</description>

  <maintainer email="dpwivagg@todo.todo">dpwivagg</maintainer>


  <license>MIT</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>tough_perception_common</depend>
  <depend>tough_controller_interface</depend>
  <depend>tough_footstep</depend>
  <depend>rviz</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
